[package]
name = "centurion"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
chrono-tz = "0.10.0"
dotenvy = "0.15.7"
percent-encoding = "2.3.1"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "cookies"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.42.0", features = ["full"] }
